--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "jose": "^6.1.3",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
