--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
