--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
-, "app/saidas/limites/actions"  ],
+    "**/*.mts",
+    "app/(main)/saidas/limites/actions"
+  ],
   "exclude": ["node_modules"]
 }
